--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url:          http://algo.rotoscope.work/
 
 tag: Names
 
-logo:         https://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-400.png
+logo:         https://s3.amazonaws.com/kinlane-productions/api-evangelist-site/api-evangelist-logo-algorotoscope.png
 logo_width:   80
 logo_bottom_padding: 10
 
