--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:        Algorotoscope
-url:          http://algo.rotoscope.work/
+url:          http://algorithmic.rotoscope.work/
 
 tag: Names
 
